--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
             
         </footer>
     </div>
-    <script src="/scripts/script.js"></script>
+    <script src="./scripts/script.js"></script>
 </body>
 
 </html>
