--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body>
     <div class="page-container">
-        <img src="adaptacja.jpg" alt=""">
+        <img src="adaptacja.jpg" alt="">
         <header class="mainheader">
             <nav class="mainnav">
                 <a href="#">O firmie</a>
