--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 <body>
     <div class="page-container">
         <img src="adaptacja.jpg" alt="">
+        <img src="img/balustrada.jpg" alt="">
         <header class="mainheader">
             <nav class="mainnav">
                 <a href="#">O firmie</a>
