--- a/index.html
+++ b/index.html
@@ -11,8 +11,6 @@
 
 <body>
     <div class="page-container">
-        <img src="adaptacja.jpg" alt="">
-        <img src="img/balustrada.jpg" alt="">
         <header class="mainheader">
             <nav class="mainnav">
                 <a href="#">O firmie</a>
@@ -119,54 +117,54 @@
                 <!-- Full-width images with number and caption text -->
                 <div class="mySlides fade">
                     <div class="numbertext">1 / 10</div>
-                    <img src="/img/kitchen1.jpg" style="width:100%">
+                    <img src="./img/kitchen1.jpg" style="width:100%">
                     <div class="text">Caption Text</div>
                 </div>
 
                 <div class="mySlides fade">
                     <div class="numbertext">2 / 3</div>
-                    <img src="/img/kitchen2.jpg" style="width:100%">
+                    <img src="./img/kitchen2.jpg" style="width:100%">
                     <div class="text">Caption Two</div>
                 </div>
 
                 <div class="mySlides fade">
                     <div class="numbertext">3 / 3</div>
-                    <img src="/img/kitchen3.jpg" style="width:100%">
+                    <img src="./img/kitchen3.jpg" style="width:100%">
                     <div class="text">Caption Three</div>
                 </div>
                 <div class="mySlides fade">
                     <div class="numbertext">4 / 3</div>
-                    <img src="/img/bathroom1.jpg" style="width:100%">
+                    <img src="./img/bathroom1.jpg" style="width:100%">
                     <div class="text">Caption Three</div>
                 </div>
                 <div class="mySlides fade">
                     <div class="numbertext">5 / 3</div>
-                    <img src="/img/bathroom2.jpg" style="width:100%">
+                    <img src="./img/bathroom2.jpg" style="width:100%">
                     <div class="text">Caption Three</div>
                 </div>
                 <div class="mySlides fade">
                     <div class="numbertext">6 / 3</div>
-                    <img src="/img/bathroom3.jpg" style="width:100%">
+                    <img src="./img/bathroom3.jpg" style="width:100%">
                     <div class="text">Caption Three</div>
                 </div>
                 <div class="mySlides fade">
                     <div class="numbertext">7 / 10</div>
-                    <img src="/img/biuro.jpg" style="width:100%">
+                    <img src="./img/biuro.jpg" style="width:100%">
                     <div class="text">Caption Three</div>
                 </div>
                 <div class="mySlides fade">
                     <div class="numbertext">8 / 10</div>
-                    <img src="/img/hotel.jpg" style="width:100%">
+                    <img src="./img/hotel.jpg" style="width:100%">
                     <div class="text">Caption Three</div>
                 </div>
                 <div class="mySlides fade">
                     <div class="numbertext">9 / 10</div>
-                    <img src="/img/podloga.jpg" style="width:100%">
+                    <img src="./img/podloga.jpg" style="width:100%">
                     <div class="text">Caption Three</div>
                 </div>
                 <div class="mySlides fade">
                     <div class="numbertext">10 / 10</div>
-                    <img src="/img/ogrodzenie.jpg" style="width:100%">
+                    <img src="./img/ogrodzenie.jpg" style="width:100%">
                     <div class="text">Caption Three</div>
                 </div>
 
