--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             <div class="company-title"><i class="fas fa-tools"></i> Renovatex</div>
             <div class="company-title-desc">Usługi remontowo-budowlane</div>
             
-            <button class="mainheader-button">Poznaj nas!</button>
+            <a class="mainheader-button-a" href="#about-company"><button class="mainheader-button">Poznaj nas!</button></a>
 
         </header>
         <div class="main-container">
@@ -125,60 +125,50 @@
             <span id="gallery"></span>
             <div class="section-title">Nasze realizacje: </div>
             <!-- Slideshow container -->
-            <div class="slideshow-container">
+            <div class="slides-container">
 
                 <!-- Full-width images with number and caption text -->
-                <div class="mySlides fade">
+                <div class="slides fade">
                     <div class="numbertext">1 / 10</div>
                     <img src="./img/kitchen1.jpg" style="width:100%">
-                    <div class="text">Caption Text</div>
                 </div>
 
-                <div class="mySlides fade">
-                    <div class="numbertext">2 / 3</div>
+                <div class="slides fade">
+                    <div class="numbertext">2 / 10</div>
                     <img src="./img/kitchen2.jpg" style="width:100%">
-                    <div class="text">Caption Two</div>
                 </div>
 
-                <div class="mySlides fade">
-                    <div class="numbertext">3 / 3</div>
+                <div class="slides fade">
+                    <div class="numbertext">3 / 10</div>
                     <img src="./img/kitchen3.jpg" style="width:100%">
-                    <div class="text">Caption Three</div>
                 </div>
-                <div class="mySlides fade">
-                    <div class="numbertext">4 / 3</div>
+                <div class="slides fade">
+                    <div class="numbertext">4 / 10</div>
                     <img src="./img/bathroom1.jpg" style="width:100%">
-                    <div class="text">Caption Three</div>
                 </div>
-                <div class="mySlides fade">
-                    <div class="numbertext">5 / 3</div>
+                <div class="slides fade">
+                    <div class="numbertext">5 / 10</div>
                     <img src="./img/bathroom2.jpg" style="width:100%">
-                    <div class="text">Caption Three</div>
                 </div>
-                <div class="mySlides fade">
-                    <div class="numbertext">6 / 3</div>
+                <div class="slides fade">
+                    <div class="numbertext">6 / 10</div>
                     <img src="./img/bathroom3.jpg" style="width:100%">
-                    <div class="text">Caption Three</div>
                 </div>
-                <div class="mySlides fade">
+                <div class="slides fade">
                     <div class="numbertext">7 / 10</div>
                     <img src="./img/biuro.jpg" style="width:100%">
-                    <div class="text">Caption Three</div>
                 </div>
-                <div class="mySlides fade">
+                <div class="slides fade">
                     <div class="numbertext">8 / 10</div>
                     <img src="./img/hotel.jpg" style="width:100%">
-                    <div class="text">Caption Three</div>
                 </div>
-                <div class="mySlides fade">
+                <div class="slides fade">
                     <div class="numbertext">9 / 10</div>
                     <img src="./img/podloga.jpg" style="width:100%">
-                    <div class="text">Caption Three</div>
                 </div>
-                <div class="mySlides fade">
+                <div class="slides fade">
                     <div class="numbertext">10 / 10</div>
                     <img src="./img/ogrodzenie.jpg" style="width:100%">
-                    <div class="text">Caption Three</div>
                 </div>
 
                 <!-- Next and previous buttons -->
