--- a/index.html
+++ b/index.html
@@ -46,28 +46,28 @@
             <section class="advantages">
                 <div class="advantage-item">
                 
-                    <i class="fas fa-sign-language"></i>
+                    <i class="fas fa-user-check"></i>
                     <div class="item-text">
                         <div>Ponad 800</div>
                         <div>zadowolonych klientów</div>
                     </div>
                 </div>
                 <div class="advantage-item">
-                    <i class="fas fa-home"></i>
+                    <i class="fas fa-history"></i>
                     <div class="item-text">
                         <div>10 lat</div>
                         <div>doświadczenia</div>
                     </div>
                 </div>
                 <div class="advantage-item">
-                    <i class="fas fa-home"></i>
+                    <i class="fas fa-screwdriver"></i>
                     <div class="item-text">
                         <div>Sprzęt</div>
                         <div>najlepszy</div>
                     </div>
                 </div>
                 <div class="advantage-item">
-                    <i class="fas fa-home"></i>
+                    <i class="fas fa-sort-amount-up-alt"></i>
                     <div class="item-text">
                         <div>Materiały</div>
                         <div>najwyższej jakości</div>
@@ -128,45 +128,45 @@
             <div class="slides-container">
 
                 <!-- Full-width images with number and caption text -->
-                <div class="slides fade">
+                <div class="slides gallery-animation">
                     <div class="numbertext">1 / 10</div>
                     <img src="./img/kitchen1.jpg" style="width:100%">
                 </div>
 
-                <div class="slides fade">
+                <div class="slides gallery-animation">
                     <div class="numbertext">2 / 10</div>
                     <img src="./img/kitchen2.jpg" style="width:100%">
                 </div>
 
-                <div class="slides fade">
+                <div class="slides gallery-animation">
                     <div class="numbertext">3 / 10</div>
                     <img src="./img/kitchen3.jpg" style="width:100%">
                 </div>
-                <div class="slides fade">
+                <div class="slides gallery-animation">
                     <div class="numbertext">4 / 10</div>
                     <img src="./img/bathroom1.jpg" style="width:100%">
                 </div>
-                <div class="slides fade">
+                <div class="slides gallery-animation">
                     <div class="numbertext">5 / 10</div>
                     <img src="./img/bathroom2.jpg" style="width:100%">
                 </div>
-                <div class="slides fade">
+                <div class="slides gallery-animation">
                     <div class="numbertext">6 / 10</div>
                     <img src="./img/bathroom3.jpg" style="width:100%">
                 </div>
-                <div class="slides fade">
+                <div class="slides gallery-animation">
                     <div class="numbertext">7 / 10</div>
                     <img src="./img/biuro.jpg" style="width:100%">
                 </div>
-                <div class="slides fade">
+                <div class="slides gallery-animation">
                     <div class="numbertext">8 / 10</div>
                     <img src="./img/hotel.jpg" style="width:100%">
                 </div>
-                <div class="slides fade">
+                <div class="slides gallery-animation">
                     <div class="numbertext">9 / 10</div>
                     <img src="./img/podloga.jpg" style="width:100%">
                 </div>
-                <div class="slides fade">
+                <div class="slides gallery-animation">
                     <div class="numbertext">10 / 10</div>
                     <img src="./img/ogrodzenie.jpg" style="width:100%">
                 </div>
