--- a/index.html
+++ b/index.html
@@ -62,8 +62,8 @@
                 <div class="advantage-item">
                     <i class="fas fa-screwdriver"></i>
                     <div class="item-text">
-                        <div>Sprzęt</div>
-                        <div>najlepszy</div>
+                        <div>Profesjonalny</div>
+                        <div>sprzęt</div>
                     </div>
                 </div>
                 <div class="advantage-item">
