--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
                 </div>
             </div>
                     <p id="designed">
-                        Designed by lukaszgnyra
+                        Designed by lukaszgnyra. 2020
                     </p>
 
             
